--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.10",
+    "@types/validator": "^13.11.6",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "validator": "^13.11.0"
   }
 }
