--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.7"
+    "zone.js": "~0.14.7",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^11.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.6",
