--- a/client/package.json
+++ b/client/package.json
@@ -16,15 +16,17 @@
     "@angular/compiler": "^18.0.5",
     "@angular/core": "^18.0.5",
     "@angular/forms": "^18.0.5",
+    "@angular/material": "^17.1.2",
     "@angular/platform-browser": "^18.0.5",
     "@angular/platform-browser-dynamic": "^18.0.5",
     "@angular/router": "^18.0.5",
+    "@ngrx/signals": "^17.2.0",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^11.0.2",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.7",
-    "lottie-web": "^5.12.2",
-    "ngx-lottie": "^11.0.2"
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.6",
